5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1800_2566.log
== TEST (2019-06-07 11:31:50) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(v,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==5):
		cont[5] = cont[5] + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:32:45) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(v,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==5):
		cont[5] = cont[5] + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:33:29) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(v,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==5):
		cont[5] = cont[5] + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:34:21) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(v,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1


print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:35:27) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(v,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1


print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:36:06) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1


print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:39:39) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1

cont1 = zeros(6,dtype=int)
for i in range(size(cont)):
	cont1[i] = round(cont[i]/size(v),1)

print(cont1)

print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:40:08) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1


for i in range(size(cont)):
	cont[i] = round(cont[i]/size(v),1)

print(cont)

print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:40:14) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1


for i in range(size(cont)):
	cont[i] = round(cont[i]/size(v),1)

print(cont)

print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:42:35) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1


for i in range(size(cont)):
	cont[i] = (cont[i]/size(cont)) * 100
print(cont)




print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:43:13) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1


for i in range(size(cont)):
	cont[i] = (cont[i]/size(cont)) * 100
print(cont)




print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:43:40) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1


for i in range(size(cont)):
	cont[i] = (cont[i]/size(cont)) * 100
print(cont)




print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:44:05) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1


for i in range(size(cont)):
	cont[i] = (cont[i]/size(cont)) * 100
print(round(cont,1))




print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:44:13) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1


for i in range(size(cont)):
	cont[i] = (cont[i]/size(cont)) * 100
print(round(cont,1))




print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:45:16) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1


for i in range(size(cont)):
	cont[i] = cont[i]/size(cont)




print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:45:45) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1


for i in range(size(cont)):
	cont[i] = cont[i]/size(cont)
print(cont)




print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:45:54) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1


for i in range(size(cont)):
	cont[i] = cont[i]/size(cont)
print(cont)




print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:46:17) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1


for i in range(size(cont)):
	cont[i] = (cont[i]/size(cont)) * 100
print(cont)




print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:46:58) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
print(cont)

for i in range(size(cont)):
	
print(cont)




print(cont)
-- ERROR:
File "XXXX", line 23
    print(cont)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:47:03) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
print(cont)





print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:47:37) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
print(cont * 10)





print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:47:41) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
print(cont * 10)





print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 11:47:54) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
print(cont * 10)





print(cont)
-- EXECUTION TIME:
0.964655
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[30  0  0 30 40 60]
[3 0 0 3 4 6]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[10 20 40 50 50 80]
[1 2 4 5 5 8]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[20 10 30 10 20 40]
[2 1 3 1 2 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:48:52) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	cont[i] = cont[i] * 10





print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:49:03) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	cont[i] = cont[i] * 10

print(cont)





print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 11:49:19) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	cont[i] = cont[i] * 10

print(cont)





print(cont)
-- EXECUTION TIME:
1.097
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[30  0  0 30 40 60]
[30  0  0 30 40 60]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[10 20 40 50 50 80]
[10 20 40 50 50 80]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[20 10 30 10 20 40]
[20 10 30 10 20 40]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 11:49:24) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	cont[i] = cont[i] * 10

print(cont)





print(cont)
-- EXECUTION TIME:
0.971616
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[30  0  0 30 40 60]
[30  0  0 30 40 60]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[10 20 40 50 50 80]
[10 20 40 50 50 80]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[20 10 30 10 20 40]
[20 10 30 10 20 40]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:49:55) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	cont[i] = round(cont[i],1)

print(cont)





print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:51:53) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = (cont[i]/size(v))
	cont[i] = round(a,1)

print(cont)





print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:52:08) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = (cont[i]/size(v)) * 100
	cont[i] = round(a,1)

print(cont)





print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 11:52:22) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = (cont[i]/size(v)) * 100
	cont[i] = round(a,1)

print(cont)





print(cont)
-- EXECUTION TIME:
1.17619
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 11:52:29) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = (cont[i]/size(v)) * 100
	cont[i] = round(a,1)

print(cont)





print(cont)
-- EXECUTION TIME:
1.13228
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:52:32) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = (cont[i]/size(v)) * 100
	cont[i] = round(a,1)

print(cont)





print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:53:18) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = (cont[i]/size(v)) * 100
	cont[i] = round(a,1)

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 11:53:26) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = (cont[i]/size(v)) * 100
	cont[i] = round(a,1)

print(cont)






-- EXECUTION TIME:
1.22202
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 11:53:31) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = (cont[i]/size(v)) * 100
	cont[i] = round(a,1)

print(cont)






-- EXECUTION TIME:
1.20173
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:53:44) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = (cont[i]/size(v)) * 100
	cont[i] = round(a,1)

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:53:58) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = (cont[i]/size(v)) * 100
	cont[i] = round(a,1)

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:54:18) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = (cont[i]/size(v))
	cont[i] = round(a,1)

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:55:18) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = (cont[i]/size(v))
	b = a * 100
	cont[i] = round(b,1)

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:57:05) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = (cont[i]/size(v))
	b = a /100
	cont[i] = round(b,1)

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 11:57:24) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = (cont[i]/size(v))
	b = a * 100
	cont[i] = round(b,1)

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:02:10) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = (cont[i]/size(v))
	b = a * 1000
	cont[i] = round(b,1)

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:03:43) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = round((cont[i]/size(v)),1)
	

print(a)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:12:39) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a =(cont[i]/size(v))
	cont[i] =  a
	

print(a)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:12:47) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a =(cont[i]/size(v))
	cont[i] =  a
	

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:13:08) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	
	cont[i] = cont[i]/size(v)
	

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:13:26) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	
	cont[i] = cont[i]/size(v)
	

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:14:29) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	cont[i] = cont[i]/size(v)
	

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:14:46) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	cont[i] = (cont[i]/size(v)) * 100
	

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:15:27) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	cont[i] = round(cont[i]/size(v),1) * 100
	

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:15:54) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	cont[i] = round((cont[i]/size(v)),1) * 100
	

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:17:28) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = round((cont[i]/size(v)),1)
	b = a * 100
	cont[i] = round(b,2)

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:30:58) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	cont[i] = round((cont[i]/size(v)),1)
	
print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:35:40) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = size(v)
	cont[i] = round((cont[i]/a),1)
	
print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:20:01) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
for i in range(size(cont)):
	a = size(v)
	cont[i] = round((cont[i]/a),1)
	
print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:57:27) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
		
conte = zeros(cont,dtype=int)
for i in range(size(cont)):
	conte[i] = cont[i]/size(v)
	
	
	
	
print(conte)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 21:58:40) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
		
conte = zeros(cont,dtype=int)
for i in range(size(cont)):
	conte[i] = cont[i]/size(v)
	
	
	
	
print(conte)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:09:23) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
		

for i in range(size(cont)):
	cont[i] = round((cont[i]/size(cont)*100),1)

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:10:38) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=int)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
		

for i in range(size(cont)):
	cont[i] = round((cont[i]/size(cont)*100),1)

print(cont)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:15:00) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=float)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
		
x = (cont[i]/size(cont))*100
for i in range(size(cont)):
	cont[0] = round(x,1)
	cont[1] = round(x,1)
	cont[2] = round(x,1)
	cont[3] = round(x,1)
	cont[4] = round(x,1)
	cont[5] = round(x,1)
	
print(cont)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:15:07) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=float)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
		
x = (cont[i]/size(cont))*100
for i in range(size(cont)):
	cont[0] = round(x,1)
	cont[1] = round(x,1)
	cont[2] = round(x,1)
	cont[3] = round(x,1)
	cont[4] = round(x,1)
	cont[5] = round(x,1)
	
print(cont)








-- EXECUTION TIME:
1.29383
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2566/main.py", line 20, in <module>
    x = (cont[i]/size(cont))*100
IndexError: index 15 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:15:48) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=float)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
		
x = (cont[i]/size(v))*100
for i in range(size(cont)):
	cont[0] = round(x,1)
	cont[1] = round(x,1)
	cont[2] = round(x,1)
	cont[3] = round(x,1)
	cont[4] = round(x,1)
	cont[5] = round(x,1)
	
print(cont)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:15:55) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=float)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
		
x = (cont[i]/size(v))*100
for i in range(size(cont)):
	cont[0] = round(x,1)
	cont[1] = round(x,1)
	cont[2] = round(x,1)
	cont[3] = round(x,1)
	cont[4] = round(x,1)
	cont[5] = round(x,1)
	
print(cont)








-- EXECUTION TIME:
1.06941
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2566/main.py", line 20, in <module>
    x = (cont[i]/size(v))*100
IndexError: index 15 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:16:31) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=float)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
		
x = (cont[i]/size(v))*100
for i in range(size(cont)):
	cont[0] = round(x,1)
	cont[1] = round(x,1)
	cont[2] = round(x,1)
	cont[3] = round(x,1)
	cont[4] = round(x,1)
	cont[5] = round(x,1)
	
print(cont)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:16:37) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=float)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
		
x = (cont[i]/size(v))*100
for i in range(size(cont)):
	cont[0] = round(x,1)
	cont[1] = round(x,1)
	cont[2] = round(x,1)
	cont[3] = round(x,1)
	cont[4] = round(x,1)
	cont[5] = round(x,1)
	
print(cont)








-- EXECUTION TIME:
0.892386
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2566/main.py", line 20, in <module>
    x = (cont[i]/size(v))*100
IndexError: index 15 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:16:45) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=float)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
		
x = (cont[i]/size(v))*100
for i in range(size(cont)):
	cont[0] = round(x,1)
	cont[1] = round(x,1)
	cont[2] = round(x,1)
	cont[3] = round(x,1)
	cont[4] = round(x,1)
	cont[5] = round(x,1)
	
print(cont)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:17:37) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=float)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
		
x = (cont[i]/size(v))*100
for i in range(size(cont)):
	cont[i] = round(((cont[i]/size(v))*100),1)
	
print(cont)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:17:43) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=float)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
		
x = (cont[i]/size(v))*100
for i in range(size(cont)):
	cont[i] = round(((cont[i]/size(v))*100),1)
	
print(cont)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:18:02) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=float)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
		

for i in range(size(cont)):
	cont[i] = round(((cont[i]/size(v))*100),1)
	
print(cont)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:18:10) 
-- CODE:
from numpy import *
v = array(eval(input("insira os dias de falta:")))

cont = zeros(6,dtype=float)

for i in range(size(v)):
	if(v[i]==2):
		cont[0] = cont[0] + 1
	elif(v[i]==3):
		cont[1] = cont[1] + 1
	elif(v[i]==4):
		cont[2] = cont[2] + 1
	elif(v[i]==5):
		cont[3] = cont[3] + 1
	elif(v[i]==6):
		cont[4] = cont[4] + 1
	elif(v[i]==7):
		cont[5] = cont[5] + 1
		

for i in range(size(cont)):
	cont[i] = round(((cont[i]/size(v))*100),1)
	
print(cont)








-- EXECUTION TIME:
1.11978
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:27:47) 
-- CODE:
from numpy import *

v = array(eval(input("insira os dias de falta:")
					
cont = zeros(6,dtype = float)
					
for i in range(size(v)):
	if(v[i] == 2):
		cont[0] =  cont[0] + 1
	elif(v[i] == 3):
		cont[1] = cont[1] + 1
	elif(v[i] == 4):
		cont[2] = cont[2] + 1
	elif(v[i] == 5):
		cont[3] = cont[3] + 1
	elif(v[i] == 6):
		cont[4] = cont[4] + 1
	elif(v[i] == 7):
		cont[5] = cont[5] + 1
					
for i in range(size(cont)):
	cont[i] = round((cont[i]/size(v)) * 100),1))

print(cont)





-- ERROR:
File "XXXX", line 5
    cont = zeros(6,dtype = float)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:28:01) 
-- CODE:
from numpy import *

v = array(eval(input("insira os dias de falta:")))
					
cont = zeros(6,dtype = float)
					
for i in range(size(v)):
	if(v[i] == 2):
		cont[0] =  cont[0] + 1
	elif(v[i] == 3):
		cont[1] = cont[1] + 1
	elif(v[i] == 4):
		cont[2] = cont[2] + 1
	elif(v[i] == 5):
		cont[3] = cont[3] + 1
	elif(v[i] == 6):
		cont[4] = cont[4] + 1
	elif(v[i] == 7):
		cont[5] = cont[5] + 1
					
for i in range(size(cont)):
	cont[i] = round((cont[i]/size(v)) * 100),1))

print(cont)





-- ERROR:
File "XXXX", line 22
    cont[i] = round((cont[i]/size(v)) * 100),1))
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:30:21) 
-- CODE:
from numpy import *

v = array(eval(input("insira os dias de falta:")))
					
cont = zeros(6,dtype = float)
					
for i in range(size(v)):
	if(v[i] == 2):
		cont[0] =  cont[0] + 1
	elif(v[i] == 3):
		cont[1] = cont[1] + 1
	elif(v[i] == 4):
		cont[2] = cont[2] + 1
	elif(v[i] == 5):
		cont[3] = cont[3] + 1
	elif(v[i] == 6):
		cont[4] = cont[4] + 1
	elif(v[i] == 7):
		cont[5] = cont[5] + 1
					
for i in range(size(cont)):
	cont[i] = round((cont[i]/size(v))*100,1)

print(cont)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:30:41) 
-- CODE:
from numpy import *

v = array(eval(input("insira os dias de falta:")))
					
cont = zeros(6,dtype = float)
					
for i in range(size(v)):
	if(v[i] == 2):
		cont[0] =  cont[0] + 1
	elif(v[i] == 3):
		cont[1] = cont[1] + 1
	elif(v[i] == 4):
		cont[2] = cont[2] + 1
	elif(v[i] == 5):
		cont[3] = cont[3] + 1
	elif(v[i] == 6):
		cont[4] = cont[4] + 1
	elif(v[i] == 7):
		cont[5] = cont[5] + 1
					
for i in range(size(cont)):
	cont[i] = round((cont[i]/size(v))*100,1)

print(cont)





-- EXECUTION TIME:
0.736844
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
